# obpy-trader

./: .gitignore  README.md  pyproject.toml
ansible/: README.md  deploy_app.yml  deploy_static.yml  setup_app.yml  setup_nginx.yml  setup_user.yml  variables.yml
ansible/production/: inventory
ansible/templates/: id_rsa  id_rsa.pub  nginx.j2  supervisor.j2
ob/: cli.py  server.py  settings.py
ob/api/: app.py
ob/api/routers/: cloud.py  root.py
ob/api/use_cases/: __init__.py  load_cloud_files.py
ob/containers/: api.py  binance.py  core.py
ob/exchanges/: __init__.py  base.py  service.py
ob/exchanges/binance/: __init__.py  exchange.py  stream.py
ob/exchanges/models/: __init__.py  exchange_name.py
ob/factories/: __init__.py  obpy_file.py  order_book.py  order_book_updates.py  symbol.py  time.py  trade.py
ob/models/: __init__.py  obf_code.py  obpy_code.py  obpy_file.py  order_book.py  order_book_updates.py  symbol.py  trade.py
ob/resources/: ddb_client.py  http_client.py  s3.py  s3_client.py
ob/storage/: __init__.py  settings.py
ob/storage/backends/: __init__.py  (+2 more)
ob/use_cases/: upload_obpy_file.py  write_obpy.py  writer_obpy.py
pulumi/: Pulumi.production.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi/app/: lambda_function.py
tests/: conftest.py
tests/data/: example.obpy
tests/factories/: test_obpy_file.py  test_order_book.py  test_order_book_updates.py  test_symbol.py  test_trade.py
tests/models/: test_order_book.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue
(+31 files in other folders)
